--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -3,27 +3,27 @@
 @tailwind utilities;
 
 @layer utilities {
-  ::-webkit-scrollbar {
+  .scrollbar::-webkit-scrollbar {
     width: 5px;
     height: 5px;
   }
 
-  ::-webkit-scrollbar:hover {
+  .scrollbar::-webkit-scrollbar:hover {
     cursor: pointer;
   }
 
-  ::-webkit-scrollbar-track {
+  .scrollbar::-webkit-scrollbar-track {
     border-radius: 100vh;
     background: theme('colors.blue.prussian' / 20%);
   }
 
-  ::-webkit-scrollbar-thumb {
+  .scrollbar::-webkit-scrollbar-thumb {
     background: theme('colors.blue.prussian' / 80%);
     border-radius: 100vh;
     border: 3px solid theme('colors.blue.prussian' / 80%);
   }
 
-  ::-webkit-scrollbar-thumb:hover {
+  .scrollbar::-webkit-scrollbar-thumb:hover {
     background: theme('colors.blue.prussian');
     cursor: pointer;
   }
